[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Dr.NiladriB <niladri.banerjee@godtlevert.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
altair = "5.2.0"
asttokens = "2.4.1"
attrs = "23.1.0"
blinker = "1.7.0"
build = "1.0.3"
cachecontrol = "0.13.1"
cachetools = "5.3.2"
certifi = "2023.11.17"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
decorator = "5.1.1"
distlib = "0.3.8"
dulwich = "0.21.7"
executing = "2.0.1"
fastjsonschema = "2.19.0"
filelock = "3.13.1"
gitdb = "4.0.11"
gitpython = "3.1.40"
idna = "3.6"
importlib-metadata = "6.11.0"
installer = "0.7.0"
ipython = "8.18.1"
ipyvizzu = "0.16.2"
ipyvizzu-story = "0.9.0"
jaraco-classes = "3.3.0"
jedi = "0.19.1"
jinja2 = "3.1.2"
jsonschema = "4.20.0"
jsonschema-specifications = "2023.11.2"
keyring = "24.3.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
matplotlib-inline = "0.1.6"
mdurl = "0.1.2"
more-itertools = "10.1.0"
msgpack = "1.0.7"
numpy = "1.26.2"
packaging = "23.2"
pandas = "2.1.4"
parso = "0.8.3"
pexpect = "4.9.0"
pillow = "10.1.0"
pkginfo = "1.9.6"
platformdirs = "3.11.0"
poetry = "1.7.1"
poetry-core = "1.8.1"
poetry-plugin-export = "1.6.0"
prompt-toolkit = "3.0.43"
protobuf = "4.25.1"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
pyarrow = "14.0.1"
pycparser = "2.21"
pydeck = "0.8.1b0"
pygments = "2.17.2"
pyproject-hooks = "1.0.0"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
rapidfuzz = "3.5.2"
referencing = "0.32.0"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rich = "13.7.0"
rpds-py = "0.13.2"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
stack-data = "0.6.3"
streamlit = "1.29.0"
streamlit-vizzu = "0.1.4"
tenacity = "8.2.3"
toml = "0.10.2"
tomlkit = "0.12.3"
toolz = "0.12.0"
tornado = "6.4"
traitlets = "5.14.0"
trove-classifiers = "2023.11.29"
typing-extensions = "4.9.0"
tzdata = "2023.3"
tzlocal = "5.2"
urllib3 = "2.1.0"
validators = "0.22.0"
virtualenv = "20.25.0"
wcwidth = "0.2.12"
xattr = "0.10.1"
zipp = "3.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
